k8s/apps/dozzle/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dozzle
  labels:
    istio.io/dataplane-mode: ambient
