k8s/apps/dozzle/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  namespace: dozzle
  labels:
    app.kubernetes.io/name: dozzle
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dozzle
  ports:
    - name: http
      port: 4180
      targetPort: http
